<resources>
    <string name="app_name">My12306</string>

    <!--LoginActivity-->
    <string name="username">用户</string>
    <string name="password">密码</string>
    <string name="remember">记住密码</string>
    <string name="auto">自动登录</string>
    <string name="forget">忘记密码 ></string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="ticketreserve">车票预订</string>
    <string name="orderfind">订单查询</string>
    <string name="mine12306">我的12306</string>
    <string name="inputusername">请输入用户名</string>
    <string name="inputpassword">请输入密码</string>
   <!--RegisterActivity-->
    <string name="basicInfo">基本信息</string>
    <string name="regusername">用 户 名</string>
    <string name="usernamehint">字母、数字,6-30位</string>
    <string name="regpassword">密    码</string>
    <string name="passwordhint">不少于6位</string>
    <string name="passwordsure">密码确认</string>
    <string name="surehint">请再次输入密码</string>
    <string name="detailinfo">详细信息</string>
    <string name="name">姓名</string>
    <string name="namehint">请输入真实姓名,以便购票</string>
    <string name="IDtype">证件类型</string>
    <string name="IDnum">证件号码</string>
    <string name="IDnuminit">请准确完整填写</string>
    <string name="contactinfo">联系方式</string>
    <string name="phonenum">手机号码</string>
    <string name="phonenumhint">请准确填写您的手机号</string>
    <string name="email">电子邮件</string>
    <string name="emailhint">请准确填写邮箱地址</string>
    <string name="extrainfo">附加信息</string>
    <string name="customerType">旅客类型</string>
    <string name="agree">同意</string>
    <string name="server">服务条款</string>
    <string name="next">下一步</string>
    <string name="adult">成人</string>
    <string name="IDCard">身份证</string>
    <string name="commit">提交</string>

    <string name="net_error">当前网路不可用</string>
    <string name="contactadd">数据加载中</string>
    <string name="logining">正在登录中，请稍后...</string>
</resources>
