<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:scrollbars="vertical"
    android:fadingEdge="vertical"
    >
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/login_top"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/basicInfo"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="@dimen/textsize"/>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="horizontal"
        android:background="@color/white"
        >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/regusername"
            android:textSize="@dimen/textsize"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usernamehint"
            android:layout_marginLeft="30dp"
            android:id="@+id/et_username"
            android:background="@null"/>
    </LinearLayout>
    <include layout="@layout/register_splitline"/>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="horizontal"
        android:background="@color/white"
        >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/regpassword"
            android:textSize="@dimen/textsize"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordhint"
            android:id="@+id/password"
            android:layout_marginLeft="30dp"
            android:background="@null"/>
    </LinearLayout>
    <include layout="@layout/register_splitline"/>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="horizontal"
        android:background="@color/white"
        >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/passwordsure"
            android:textSize="@dimen/textsize"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/surehint"
            android:id="@+id/et_sure"
            android:layout_marginLeft="30dp"
            android:background="@null"/>
    </LinearLayout>
    <include layout="@layout/register_splitline"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/detailinfo"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="@dimen/textsize"/>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="horizontal"
        android:background="@color/white"
        >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/name"
            android:textSize="@dimen/textsize"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/namehint"
            android:id="@+id/et_name"
            android:layout_marginLeft="30dp"
            android:background="@null"/>
    </LinearLayout>
    <include layout="@layout/register_splitline"/>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="horizontal"
        android:background="@color/white"
        >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/IDtype"
            android:textSize="@dimen/textsize"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_IDType"
            android:text="@string/IDCard"
            android:textSize="@dimen/textsize"
            android:layout_marginLeft="30dp"
            />
    </LinearLayout>
    <include layout="@layout/register_splitline"/>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="horizontal"
        android:background="@color/white"
        >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/IDnum"
            android:textSize="@dimen/textsize"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/IDnuminit"
            android:id="@+id/et_IDnum"
            android:layout_marginLeft="30dp"
            android:background="@null"/>
    </LinearLayout>
    <include layout="@layout/register_splitline"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/contactinfo"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="@dimen/textsize"/>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="horizontal"
        android:background="@color/white"
        >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/phonenum"
            android:textSize="@dimen/textsize"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phonenumhint"
            android:layout_marginLeft="30dp"
            android:id="@+id/et_phonenum"
            android:background="@null"/>
    </LinearLayout>
    <include layout="@layout/register_splitline"/>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="horizontal"
        android:background="@color/white"
        >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/email"
            android:textSize="@dimen/textsize"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailhint"
            android:id="@+id/et_email"
            android:layout_marginLeft="30dp"
            android:background="@null"/>
    </LinearLayout>
    <include layout="@layout/register_splitline"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/extrainfo"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="@dimen/textsize"/>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="horizontal"
        android:background="@color/white"
        >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/customerType"
            android:textSize="@dimen/textsize"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:textSize="@dimen/textsize"
            android:id="@+id/tv_customerType"
            android:text="@string/adult"
            />
    </LinearLayout>
    <include layout="@layout/register_splitline"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp">
        <CheckBox
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/agree"
            >
        </CheckBox>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server"
            android:layout_marginLeft="10dp"
            android:textColor="@color/bule"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/btn"
        android:text="@string/commit"
        android:textColor="@color/white"
        android:textSize="@dimen/btntextsize"></Button>
</LinearLayout>
</ScrollView>