<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_weight="1"
    android:layout_height="100dp">
    <TextView
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:id="@+id/tv_ticket"
        android:text="@string/ticketreserve"
        android:gravity="center"
        android:textSize="@dimen/textsize"
        android:background="@color/black"
        android:textColor="@color/littlewhite"
        android:layout_weight="1"/>
    <TextView
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:id="@+id/tv_order"
        android:text="@string/orderfind"
        android:gravity="center"
        android:textSize="@dimen/textsize"
        android:background="@color/black"
        android:textColor="@color/littlewhite"
        android:layout_weight="1"/>
    <TextView
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:id="@+id/tv_mine"
        android:gravity="center"
        android:background="@color/black"
        android:text="@string/mine12306"
        android:textSize="@dimen/textsize"
        android:textColor="@color/littlewhite"
        android:layout_weight="1"/>
</LinearLayout>